--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 <div class="wrapper">
   <div class="glass-panel">
     <div class="glass-panel-inner">
-      <h1>SNAKE // AITUBE</h1>
+      <h1>SNAKE // LG (Liquid Glass)</h1>
       <div class="subtitle">classic nokia logic • liquid glass ui</div>
       <div class="stats-row">
         <div class="stat-chip">
@@ -833,3 +833,4 @@
 </script>
 </body>
 </html>
+
